[package]
name = "minimal_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[[bin]]
name = "minimal_rsa"
[dependencies]
rand = "0.8.5"
rayon = "1.5.1"
rug = { version = "1.15.0", features = ["default"] }


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
