[package]
name = "minimal_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[[bin]]
name = "minimal_rsa"
[dependencies]
async-recursion = "1.0.0"
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
ibig = { version = "0.3.5", features = ["default"] }
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.5.1"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = 1
