[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
honggfuzz = "0.5.54"


[dependencies.minimal_rsa]
path = ".."

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

